Working on chnage of domain

--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
         </div>
       </div>
     </section>
+    <article class="my-4 p-2" >
+      <div>
+        <h3>Notice:</h3>
+        <p>Due to some circumstances, I have hosted this application on different 
+          platform and I'm extremely sorry to say that you need to add your items again.
+        <h5><a href="/">Click Here</a></h5> to redirect to new website</p>
+      </div>
+    </article>
   </body>
   <!-- Offline -->
   <!-- <script src="bootstrap/js/jQuery.js"></script>
