Working on change of domain

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h3>Notice:</h3>
         <p>Due to some circumstances, I have hosted this application on different 
           platform and I'm extremely sorry to say that you need to add your items again.
-        <h5><a href="a7todolist.netlify.app">Click Here</a></h5> to redirect to new website</p>
+        <h5><a href="https://a7todolist.netlify.app">Click Here</a></h5> to redirect to new website</p>
       </div>
     </article>
   </body>
